# wayland-build

./: .gitignore  CMakeLists.txt  debug-westeros.sh  setup.sh  start-westeros.sh  westeros-test.sh
cmake/: FindBZip2.cmake  FindCairo.cmake  FindEGL.cmake  FindEXPAT.cmake  FindEudev.cmake  FindFontconfig.cmake  FindFreetype.cmake  FindGStreamer1.cmake  FindGperf.cmake  FindGstPluginsBad1.cmake  FindGstPluginsBase1.cmake  FindGstPluginsGood1.cmake  FindLibEvdev.cmake  FindLibFFI.cmake  FindLibGBM.cmake  FindLibGLEW.cmake  FindLibGettext.cmake  FindLibGlib2.cmake  FindLibInput.cmake  FindLibJPEGTurbo.cmake  FindLibPAM.cmake  FindLibPCIAccess.cmake  FindLibPCRE.cmake  FindLibPNG.cmake  FindLibPthreadStubs.cmake  FindLibX11.cmake  FindLibXKBCommon.cmake  FindLibXau.cmake  FindLibXcb.cmake  FindLibXcbComposite.cmake  FindLibXcursor.cmake  FindLibXdamage.cmake  FindLibXdmcp.cmake  FindLibXext.cmake  FindLibXfixes.cmake  FindLibXml2.cmake  FindLibXrender.cmake  FindLibXshmfence.cmake  FindLinux-PAM.cmake  FindMesa.cmake  (+45 more)
hello-wayland/: CMakeLists.txt
package/: CMakeLists.txt
package/Linux-PAM/: CMakeLists.txt
package/bzip2/: CMakeLists.txt
package/cairo/: CMakeLists.txt
package/eudev/: CMakeLists.txt
package/expat/: CMakeLists.txt
package/fontconfig/: 0001-CHAR_WIDTH.patch  0002-redefine-CHAR_WIDTH.patch  CMakeLists.txt
package/freetype/: 0001-LFS-patch.patch  0002-LFS-patch-subpixel-rendering.patch  CMakeLists.txt
package/gettext/: CMakeLists.txt
package/glib/: CMakeLists.txt
package/gperf/: CMakeLists.txt
package/gst-plugins-bad/: CMakeLists.txt
package/gst-plugins-base/: CMakeLists.txt
package/gst-plugins-good/: CMakeLists.txt
package/gstreamer/: CMakeLists.txt
package/libdrm/: CMakeLists.txt
package/libevdev/: CMakeLists.txt
package/libffi/: 0001-Patch-for-correct-header-export.patch  CMakeLists.txt
package/libglew/: CMakeLists.txt
package/libinput/: CMakeLists.txt
package/libjpegturbo/: CMakeLists.txt
package/libpciaccess/: CMakeLists.txt
package/libpng/: CMakeLists.txt
package/libpthread-stubs/: CMakeLists.txt
package/libx11/: CMakeLists.txt
package/libxau/: CMakeLists.txt
package/libxcb/: CMakeLists.txt
package/libxcb-composite/: CMakeLists.txt
package/libxcursor/: CMakeLists.txt
package/libxdamage/: CMakeLists.txt
package/libxdmcp/: CMakeLists.txt
package/libxext/: CMakeLists.txt
package/libxfixes/: CMakeLists.txt
package/libxkbcommon/: CMakeLists.txt
package/libxml2/: 0001-Fix-XPointer-paths-beginning-with-range-to.patch  0002-Disallow-namespace-nodes-in-XPointer-ranges.patch  CMakeLists.txt
package/libxrender/: CMakeLists.txt
package/libxshmfence/: CMakeLists.txt
package/mesa/: CMakeLists.txt
package/mtdev/: CMakeLists.txt
package/pcre/: CMakeLists.txt
package/pixman/: CMakeLists.txt
package/util-linux/: CMakeLists.txt
package/wayland/: 0001-Support-architectures-with-non-empty-__USER_LABEL_PR.patch  0002-configure-add-option-to-disable-tests.patch  CMakeLists.txt
package/wayland-protocols/: CMakeLists.txt
package/westeros/: 0001-Fix_voidp_to_uint32_conversion.patch  CMakeLists.txt
package/westeros-simplebuffer/: CMakeLists.txt
package/westeros-simpleshell/: CMakeLists.txt
package/westeros-soc/: CMakeLists.txt
package/weston/: CMakeLists.txt
package/x11proto-bigreqs/: CMakeLists.txt
package/x11proto-composite/: CMakeLists.txt
package/x11proto-damage/: CMakeLists.txt
package/x11proto-dmx/: CMakeLists.txt
package/x11proto-dri2/: CMakeLists.txt
package/x11proto-dri3/: CMakeLists.txt
package/x11proto-fixes/: CMakeLists.txt
package/x11proto-fonts/: CMakeLists.txt
package/x11proto-gl/: CMakeLists.txt
package/x11proto-input/: CMakeLists.txt
package/x11proto-kb/: CMakeLists.txt
package/x11proto-present/: CMakeLists.txt
package/x11proto-randr/: CMakeLists.txt
package/x11proto-record/: CMakeLists.txt
package/x11proto-render/: CMakeLists.txt
package/x11proto-resource/: CMakeLists.txt
package/x11proto-scrnsaver/: CMakeLists.txt
package/x11proto-video/: CMakeLists.txt
package/x11proto-x/: CMakeLists.txt
package/x11proto-xcmisc/: CMakeLists.txt
package/x11proto-xext/: CMakeLists.txt
package/x11proto-xf86bigfont/: CMakeLists.txt
package/x11proto-xf86dga/: CMakeLists.txt
package/x11proto-xf86dri/: CMakeLists.txt
package/x11proto-xf86vidmode/: CMakeLists.txt
package/x11proto-xinerama/: CMakeLists.txt
package/xcb-proto/: 0001-Fix-checks.patch  CMakeLists.txt
package/xtrans/: CMakeLists.txt
package/zlib/: CMakeLists.txt
wayland-simple-egl/: CMakeLists.txt
westeros/: .gitignore  CMakeLists.txt  config.h  westeros-compositor.cpp  westeros-main.cpp  westeros-nested.cpp  westeros-render-embedded.cpp  westeros-render-gl.cpp  westeros-render.cpp
westeros/.deps/: libwesteros_compositor_la-westeros-compositor.Plo  libwesteros_compositor_la-westeros-nested.Plo  libwesteros_compositor_la-westeros-render.Plo  westeros-main.Po  westeros-render-embedded.Plo  westeros-render-gl.Plo  westeros-test.Po
westeros/.libs/: libwesteros_compositor.la  libwesteros_compositor.lai  libwesteros_compositor.so.0.0.0  libwesteros_render_embedded.la  libwesteros_render_embedded.lai  libwesteros_render_embedded.so.0  libwesteros_render_embedded.so.0.0.0  libwesteros_render_gl.la  libwesteros_render_gl.lai  libwesteros_render_gl.so.0  libwesteros_render_gl.so.0.0.0  westeros
