include(package)

add_subdirectory(x11proto-bigreqs)
add_subdirectory(x11proto-composite)
add_subdirectory(x11proto-damage)
add_subdirectory(x11proto-dmx)
add_subdirectory(x11proto-dri2)
add_subdirectory(x11proto-dri3)
add_subdirectory(x11proto-fixes)
add_subdirectory(x11proto-fonts)
add_subdirectory(x11proto-gl)
add_subdirectory(x11proto-input)
add_subdirectory(x11proto-kb)
add_subdirectory(x11proto-present)
add_subdirectory(x11proto-randr)
add_subdirectory(x11proto-record)
add_subdirectory(x11proto-render)
add_subdirectory(x11proto-resource)
add_subdirectory(x11proto-scrnsaver)
add_subdirectory(x11proto-video)
add_subdirectory(x11proto-x)
add_subdirectory(x11proto-xcmisc)
add_subdirectory(x11proto-xext)
add_subdirectory(x11proto-xf86bigfont)
add_subdirectory(x11proto-xf86dga)
add_subdirectory(x11proto-xf86dri)
add_subdirectory(x11proto-xf86vidmode)
add_subdirectory(x11proto-xinerama)
add_subdirectory(zlib)
add_subdirectory(libpng)
add_subdirectory(libevdev)
add_subdirectory(pixman)
add_subdirectory(freetype)
add_subdirectory(libxml2)
add_subdirectory(expat)
add_subdirectory(gperf)
add_subdirectory(fontconfig)
add_subdirectory(libffi)
add_subdirectory(wayland)
add_subdirectory(wayland-protocols)
add_subdirectory(mtdev)
add_subdirectory(libxdmcp)
add_subdirectory(xcb-proto)
add_subdirectory(libxau)
add_subdirectory(libpthread-stubs)
add_subdirectory(libxcb)
add_subdirectory(eudev)
add_subdirectory(libinput)
add_subdirectory(libxkbcommon)
add_subdirectory(libjpegturbo)
add_subdirectory(xtrans)
add_subdirectory(libx11)
add_subdirectory(libxfixes)
add_subdirectory(libxdamage)
add_subdirectory(libxext)
add_subdirectory(libxrender)
add_subdirectory(libxcursor)
add_subdirectory(libxshmfence)
add_subdirectory(libpciaccess)
add_subdirectory(libdrm)
#add_subdirectory(libglew)
add_subdirectory(mesa)
add_subdirectory(cairo)
add_subdirectory(Linux-PAM)
add_subdirectory(weston)
add_subdirectory(util-linux)
add_subdirectory(bzip2)
add_subdirectory(pcre)
add_subdirectory(gettext)
add_subdirectory(glib)
add_subdirectory(gstreamer)
add_subdirectory(gst-plugins-base)
add_subdirectory(gst-plugins-good)
add_subdirectory(gst-plugins-bad)
#add_subdirectory(westeros-simplebuffer)
#add_subdirectory(westeros-simpleshell)
#add_subdirectory(westeros-soc)
#add_subdirectory(westeros)

